--- a/content/templates/content/home.html
+++ b/content/templates/content/home.html
@@ -9,12 +9,14 @@
             <center>
                 <div class="card" style="width: 18rem;">
                     {% for object in object_list %}
-                        <img src="{{ object.img|mymedia }}" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ object.title }}</h5>
-                            <p class="card-text">{{ object.content|truncatechars:100 }}</p>
-                            <a href="{% url 'content:content_list' %}" class="btn btn-primary">Все статьи</a>
-                        </div>
+                        {% if object.is_active %}
+                            <img src="{{ object.image|mymedia }}" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Title: {{ object.title }}</h5>
+                                <p class="card-text">{{ object.content|truncatechars:100 }}</p>
+                                <a href="{% url 'content:content_detail' object.pk %}" class="btn btn-primary">See more</a>
+                            </div>
+                        {% endif %}
                     {% endfor %}
                 </div>
             </center>
