--- a/content/templates/content/author_form.html
+++ b/content/templates/content/author_form.html
@@ -8,10 +8,8 @@
                     <div class="card">
                         <div class="card-header">
                             {% if object %}
-                            <h3 class="card-title">Update content</h3>
-                        {% else %}
-                            <h3 class="card-title">Create content</h3>
-                        {% endif %}
+                                <h3 class="card-title">Update author info</h3>
+                            {% endif %}
                         </div>
                         <div class="card-body">
                             <form method="post" enctype="multipart/form-data">
@@ -20,8 +18,6 @@
                                 <button type="submit" class="btn btn-success">
                                     {% if object %}
                                         Save
-                                    {% else %}
-                                        Create
                                     {% endif %}
                                 </button>
                                 <a type="button" class="btn btn-danger" href="#" onclick="history.back()">Cancel</a>
