--- a/content/templates/content/contacts.html
+++ b/content/templates/content/contacts.html
@@ -1,10 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'content/base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-header">
+                <h1 class="card-title">Contact us!</h1>
+            </div>
+            <div class="card-body">
+                <h5>Contact Information</h5>
+                <p>Email: {{ contact_info.email }}</p>
+                <p>Phone: {{ contact_info.phone }}</p>
+                <p>Address: {{ contact_info.address }}</p>
+                <p>Telegram: {{ contact_info.telegram }}</p>
+            </div>
+            <div class="card-footer">
+                <a href="{% url 'content:home' %}" class="btn btn-primary">Go to home page</a>
+            </div>
+        </div>
+    </div>
+{% endblock %}
