--- a/content/templates/content/content_list.html
+++ b/content/templates/content/content_list.html
@@ -5,12 +5,13 @@
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <p class="lead text-body-secondary">
-                    Здесь Вы можете посмотреть все товары, представленные в нашем интернет-магазине,
-                    а так же перейти на страницу интересующего Вас товара и в категорию товара.
+                    Here you can see all content of our authors.
+                    {% if user.is_authenticated %}
                         <p>Also you can
                             <a type="button" class="btn btn-link"
                                href="{% url 'content:content_create' %}">write your content</a>
                         </p>
+                    {% endif %}
                 </p>
             </div>
         </div>
@@ -20,29 +21,25 @@
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                 {% for object in object_list %}
-
-                    <div class="col">
-                        <div class="card shadow-sm" style="width: 18rem;">
-                            <img src="{{ object.img|mymedia }}" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <p class="card-text">
-                                    {% if object.is_active %}
-                                        {{ object|title }}
-                                    {% else %}
-                                        <span class="text-muted">{{ object|title }}</span>
-                                    {% endif %}
-                                </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <a type="button" class="btn btn-sm btn-outline-secondary"
-                                           href="{% url 'content:content_detail' object.pk %}">See more</a>
-                                        <a type="button" class="btn btn-sm btn-outline-secondary"
-                                           href="{% url 'content:home' object.pk %}">Back to home page</a>
+                    {% if object.is_active %}
+                        <div class="col">
+                            <div class="card shadow-sm" style="width: 18rem;">
+                                <img src="{{ object.image|mymedia }}" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <p class="card-text">{{ object|title }}</p>
+                                    <p class="card-text">Views: {{ object.views_count }}</p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <a type="button" class="btn btn-sm btn-outline-secondary"
+                                               href="{% url 'content:content_detail' object.pk %}">See more</a>
+                                            <a type="button" class="btn btn-sm btn-outline-secondary"
+                                               href="{% url 'content:home' object.pk %}">Back to home page</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
                 {% endfor %}
             </div>
         </div>
