--- a/users/templates/users/payment_stop.html
+++ b/users/templates/users/payment_stop.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'content/base.html' %}
 
-</body>
-</html>
+{% block content %}
+    <div class="container mt-5">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="card-title">You stop the subscription! Whats the matter?</h1>
+            </div>
+            <div class="card-footer">
+                <a href="{% url 'users:subscription' %}" class="btn btn-success">Try again now!</a>
+                <a href="{% url 'content:home' %}" class="btn btn-primary">Go to home page</a>
+            </div>
+        </div>
+    </div>
+{% endblock %}
