--- a/users/templates/users/user_success_delete.html
+++ b/users/templates/users/user_success_delete.html
@@ -4,7 +4,8 @@
     <div class="container mt-5">
         <div class="card">
             <div class="card-body">
-                <h1 class="card-title">Oh, no! Something wrong! But dont worry, try it later!</h1>
+                <h1 class="card-title">Your account has been deleted successfully</h1>
+                <p class="card-text">If you wish to create a new account, you can do so by <a href="{% url 'users:register' %}">registering</a> again.</p>
             </div>
             <div class="card-footer">
                 <a href="{% url 'content:home' %}" class="btn btn-primary">Go to home page</a>
