some changes in pagination

--- a/content/templates/content/content_list.html
+++ b/content/templates/content/content_list.html
@@ -40,6 +40,8 @@
                             </div>
                         </div>
                     {% endif %}
+                    {% empty %}
+                        <p>No content found.</p>
                 {% endfor %}
             </div>
         </div>
