--- a/users/templates/users/user_success_delete.html
+++ b/users/templates/users/user_success_delete.html
@@ -5,7 +5,7 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="card-title">Your account has been deleted successfully</h1>
-                <p class="card-text">If you wish to create a new account, you can do so by <a href="{% url 'users:register' %}">registering</a> again.</p>
+                <p class="card-text">If you wish to create a new one, you can do so by <a href="{% url 'users:register' %}">registering</a> again.</p>
             </div>
             <div class="card-footer">
                 <a href="{% url 'content:home' %}" class="btn btn-primary">Go to home page</a>
