--- a/users/templates/users/user_success_delete.html
+++ b/users/templates/users/user_success_delete.html
@@ -1,15 +1,16 @@
 {% extends 'content/base.html' %}
 
 {% block content %}
-    <div class="container mt-5">
-        <div class="card">
-            <div class="card-body">
-                <h1 class="card-title">Your account has been deleted successfully</h1>
-                <p class="card-text">If you wish to create a new one, you can do so by <a href="{% url 'users:register' %}">registering</a> again.</p>
-            </div>
-            <div class="card-footer">
-                <a href="{% url 'content:home' %}" class="btn btn-primary">Go to home page</a>
-            </div>
+<div class="container mt-5">
+    <div class="card mx-auto" style="max-width: 400px;">
+        <div class="card-body text-center">
+            <h1 class="card-title">Your account has been deleted successfully</h1>
+            <p class="card-text">If you wish to create a new account, you can do so by <a href="{% url 'users:register' %}">registering</a> again.
+            Or contact the <a href="{% url 'content:contacts_info' %}">administration</a>.</p>
+        </div>
+        <div class="card-footer text-center">
+            <a href="{% url 'content:home' %}" class="btn btn-primary">Go to home page</a>
         </div>
     </div>
+</div>
 {% endblock %}
