--- a/users/templates/users/subscription.html
+++ b/users/templates/users/subscription.html
@@ -10,9 +10,9 @@
                     <div class="mb-3">
                         <label for="subscription_name" class="form-label">Subscription Type:</label>
                         <select name="subscription_name" id="subscription_name" class="form-select">
-                            <option value="short">Short (1 month)</option>
-                            <option value="long">Long (6 months)</option>
-                            <option value="ultra">Ultra (1 year)</option>
+                            <option value="short">Short (1 month/600 rub)</option>
+                            <option value="long">Long (6 months/1200 rub)</option>
+                            <option value="ultra">Ultra (1 year/2100 rub)</option>
                         </select>
                     </div>
                     <button type="submit" class="btn btn-primary">Subscribe</button>
