--- a/content/templates/content/author_detail.html
+++ b/content/templates/content/author_detail.html
@@ -8,7 +8,9 @@
             <h1 class="mb-0">{{ object.user.full_name }}</h1>
         </div>
         <div class="card-body">
-            <img src="{{ object.user.avatar.url }}" class="img-fluid rounded-circle" alt="Avatar">
+            <div class="col-md-6 mb-md-0 p-md-4">
+                <img src="{{ object.img|mymedia }}" class="w-100" alt="...">
+            </div>
             <div class="mt-3">
                 <p><strong>Full Name:</strong> {{ object.user.full_name }}</p>
                 <p><strong>Exist Since:</strong> {{ object.exists_since }}</p>
